[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.3", features = ["env", "derive"] }
dotenv = "0.15.0"
ethers = "2.0.3"
indicatif = "0.17.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

semaphore = { git = "https://github.com/worldcoin/semaphore-rs", branch = "main", features = [
    "depth_30",
] }

foundry-cli = { git = "https://github.com/foundry-rs/foundry" }
eyre = "0.6.8"
hex = "0.4.3"
hex-literal = "0.4.1"
os_info = "3.7.0"
sys-info = "0.9.1"
reqwest = "0.11.16"
tracing-indicatif = "0.3.3"
futures = "0.3.28"
serde_yaml = "0.9.21"
shrinkwraprs = "0.3.0"
maplit = "1.0.2"
inquire = "0.6.2"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
